# LaserTracking-2026

./: README.md
src/: CMakeLists.txt
src/common/: README.md
src/common/include/common/: types.h
src/control/: CMakeLists.txt  README.md
src/control/config/: control.yaml
src/control/examples/: control_demo.cpp  system_demo.cpp
src/control/include/control/: config.h  controller.h
src/control/src/: config.cpp  controller.cpp
src/detector/: CMakeLists.txt  README.md
src/detector/TRTInferX/: CMakeLists.txt
src/detector/classical/: CMakeLists.txt  README.md
src/detector/classical/config/: classical.yaml
src/detector/classical/include/detector_classical/: classical_detector.h  pingpong_detector.h
src/detector/classical/src/: pingpong_detector.cpp
src/detector/common/: CMakeLists.txt  README.md
src/detector/common/include/detector_common/: detector.h  measurement.h
src/detector/common/src/: measurement.cpp
src/detector/config/: detector.yaml
src/detector/examples/: hik_camera_demo.cpp  main.cpp
src/detector/model/: README.md
src/detector/registry/: CMakeLists.txt  README.md
src/detector/registry/include/detector_registry/: backend.h
src/detector/registry/src/: backend.cpp
src/detector/trt_engine/: CMakeLists.txt  README.md
src/detector/trt_engine/config/: trt.yaml
src/detector/trt_engine/include/detector_trt/: trt_detector.h
src/detector/trt_engine/src/: trt_detector.cpp
src/gimbal_serial/: CMakeLists.txt  README.md
src/gimbal_serial/examples/: main.cpp
src/gimbal_serial/include/gimbal_serial/: protocol.h
src/gimbal_serial/src/: protocol.cpp
src/hik_camera/: CMakeLists.txt  README.md
src/hik_camera/config/: camera.mfs  config.yaml  ost.txt  ost.yaml
src/hik_camera/examples/: main.cpp
src/hik_camera/include/hik_camera/: gpu_demosaic_npp.h  hik_camera.h
src/hik_camera/src/: gpu_demosaic_npp.cu  hik_camera.cpp  hik_camera_config.cpp  hik_camera_frame.cpp  hik_camera_gpu.cpp
src/log/: log.txt
src/tool/: README.md
src/tool/boresight_calibrator/: CMakeLists.txt  README.md  boresight.yaml
src/tool/boresight_calibrator/src/: boresight_calibrator.cpp
src/tool/parallax_estimator/: CMakeLists.txt  README.md
src/tool/parallax_estimator/config/: parallax.yaml
src/tool/parallax_estimator/examples/: parallax_demo.cpp
src/tool/parallax_estimator/include/tool/: parallax_estimator.h
src/tool/parallax_estimator/outputs/: parallax.csv
src/tool/parallax_estimator/src/: parallax_estimator.cpp
